@@ -1,8 +1,8 @@
 ##########################################################################################
-# Program Name:				Discord Bot
-# Author:					DMCTruong
-# Last Updated:				July 27, 2017
-# Program Description:		A general purpose bot that was created for Discord chat	
+# Program Name:             Discord Bot
+# Author:                   DMCTruong
+# Last Updated:             July 29, 2017
+# Program Description:      A general purpose bot that was created for Discord chat	
 ##########################################################################################
 
 
